--- a/android_app/app/src/main/res/layout/fragment_home.xml
+++ b/android_app/app/src/main/res/layout/fragment_home.xml
@@ -12,71 +12,81 @@
 
         <SeekBar
             android:id="@+id/seekBarX"
-            android:layout_width="391dp"
-            android:layout_height="70dp"
+            android:layout_width="350dp"
+            android:layout_height="80dp"
             android:layout_marginTop="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextText" />
+            app:layout_constraintTop_toBottomOf="@+id/grab_button" />
 
         <SeekBar
             android:id="@+id/seekBarY"
-            android:layout_width="391dp"
-            android:layout_height="69dp"
-            app:layout_constraintBottom_toTopOf="@+id/joystickView"
+            android:layout_width="350dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.504"
+            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seekBarX"
-            app:layout_constraintVertical_bias="0.137" />
+            app:layout_constraintTop_toBottomOf="@+id/seekBarX" />
 
         <SeekBar
             android:id="@+id/seekBarZ"
-            android:layout_width="391dp"
-            android:layout_height="69dp"
-            android:layout_marginTop="17dp"
-            app:layout_constraintBottom_toTopOf="@+id/joystickView"
+            android:layout_width="350dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.508"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/seekBarY"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/seekBarY" />
 
         <Button
             android:id="@+id/button_second"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="4dp"
             android:text="buttons"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.947"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.023" />
+            app:layout_constraintVertical_bias="0.024" />
 
         <com.example.victor.JoystickView
             android:id="@+id/joystickView"
-            android:layout_width="391dp"
-            android:layout_height="330dp"
+            android:layout_width="300dp"
+            android:layout_height="250dp"
             android:layout_centerInParent="true"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBarZ"
+            app:layout_constraintVertical_bias="1.0" />
 
         <EditText
             android:id="@+id/editTextText"
-            android:layout_width="314dp"
-            android:layout_height="54dp"
+            android:layout_width="188dp"
+            android:layout_height="49dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="28dp"
             android:ems="10"
             android:inputType="text"
             android:text="Name"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintEnd_toStartOf="@+id/button_second"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.094" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/grab_button"
+            android:layout_width="164dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="32dp"
+            android:text="Grab"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editTextText" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
