--- a/android_app/app/src/main/res/navigation/nav_graph.xml
+++ b/android_app/app/src/main/res/navigation/nav_graph.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="com.example.victor.buttonsFragment"
+        android:name="com.example.victor.ClawAngleFragment"
         android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_buttons">
+        tools:layout="@layout/fragment_claw_angle">
 
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="com.example.victor.homeFragment"
+        android:name="com.example.victor.HomeFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_home">
 
