--- a/android_app/app/src/main/res/xml/network_security_config.xml
+++ b/android_app/app/src/main/res/xml/network_security_config.xml
@@ -3,5 +3,6 @@
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">192.168.1.69</domain>
         <domain includeSubdomains="true">192.168.146.182</domain>
+        <domain includeSubdomains="true">192.168.132.182</domain>
     </domain-config>
 </network-security-config>
