--- a/android_app/app/src/main/res/layout/fragment_claw_angle.xml
+++ b/android_app/app/src/main/res/layout/fragment_claw_angle.xml
@@ -16,7 +16,7 @@
             android:id="@+id/seekBarX"
             android:layout_width="350dp"
             android:layout_height="80dp"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.482"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,26 +56,53 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="293dp"
-            android:layout_height="56dp"
-            android:layout_marginTop="188dp"
+            android:layout_width="190dp"
+            android:layout_height="53dp"
             android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="292dp"
             android:layout_height="53dp"
+            android:layout_marginTop="72dp"
             android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.494"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.859" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <SeekBar
+            android:id="@+id/seekBarCameraX"
+            android:layout_width="349dp"
+            android:layout_height="84dp"
+            android:layout_marginTop="12dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.423"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBarZ" />
+
+        <SeekBar
+            android:id="@+id/seekBarCameraY"
+            android:layout_width="355dp"
+            android:layout_height="68dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/seekBarCameraX" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="170dp"
+            android:layout_height="51dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toTopOf="@+id/seekBarX"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
